--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -58,6 +58,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="nav-bar.html">
 
 <link rel="import" href="submission/challenge-display.html">
+<link rel="import" href="submission/challenge-finished.html">
 <link rel="import" href="submission/challenge-page.html">
 <link rel="import" href="submission/countdown-timer.html">
 <link rel="import" href="submission/sequential/sequential-challenge.html">
