--- a/app/elements/submission/countdown-timer.html
+++ b/app/elements/submission/countdown-timer.html
@@ -1,4 +1,10 @@
 <dom-module id="countdown-timer">
+	<style>
+		p{
+			margin: 0;
+			padding: 0;
+		}
+	</style>
 	<template>
 			<div>
 				<p>{{formatDuration()}}</p>
