--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -16,8 +16,9 @@
 			background: white;
 		}
 		#codeEditorWrapper{
-			height: calc(100% - 40px);
-			width: 100%;
+			height: calc(100% - 72px);
+			width: calc(100% - 32px);
+			margin: 16px;
 		}
 		#leftCard{
 			margin: 16px 8px 16px 16px;
@@ -27,7 +28,7 @@
 		#leftCard>h2{
 			height: 40px;
 			margin: 0;
-			padding-left: 20px;
+			padding-left: 16px;
 		}
 		#topRightCard{
 			overflow: auto;
@@ -42,10 +43,12 @@
 			height: calc(50% - 24px);
 		}
 		#buttons{
-			height: 35px;
+			height: 45px;
+			margin: 16px 16px 16px 8px;
 		}
 		#consoleWrapper{
-			height: calc(100% - 50px);
+			margin: 8px 16px 16px 16px;
+			height: calc(100% - 90px);
 		}
 		#buttons>paper-icon-button{
 			padding: 5px;
@@ -81,6 +84,8 @@
 					<div id="buttons" class="horizontal layout">
 						<paper-icon-button icon="av:play-arrow" on-click="runCode">Run code</paper-icon-button>
 						<language-selector id="languageSelector" languages={{languages}} on-change="languageChanged"></language-selector>
+						<span class="flex"></span>
+						<paper-button raised noink class$="{{finishedButtonClass}}" on-click="finishTask">Finish</paper-button>
 					</div>
 					<div id="consoleWrapper">
 						<content></content>
@@ -102,7 +107,12 @@
 					type: Object,
 					notify: true,
 					reflectToAttribute: true
-				}
+				},
+				finishedButtonClass: {
+					type: String,
+					notify: true,
+					reflectToAttribute: true
+				},
 			},
 			observers: [
 				'afterPropertiesSet(task)'
@@ -120,6 +130,9 @@
 				var lang = this.$.languageSelector.getSelectedLanguage().tag;
 				this.$.codeEditor.runCode(lang, this.task.Key);
 				this.control.loading();
+			},
+			finishTask: function(){
+				this.fire('task-finished');
 			}
 		});
 	</script>
