--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -108,16 +108,16 @@
 				'afterPropertiesSet(task)'
 			],
 			ready: function(){
-				this.$.codeEditor.setMode("java");
+				this.$.codeEditor.setMode('java');
 			},
 			afterPropertiesSet: function(){
 				this.languages = getLanguagesForTags(this.task.Languages);
 			},
 			languageChanged: function(){
-				this.$.codeEditor.setMode(this.$.languageSelector.getSelectedLanguage().tag)
+				this.$.codeEditor.setMode(this.$.languageSelector.getSelectedLanguage().tag);
 			},
 			runCode: function(){
-				var lang = this.$.languageSelector.getSelectedLanguage().tag
+				var lang = this.$.languageSelector.getSelectedLanguage().tag;
 				this.$.codeEditor.runCode(lang, this.task.Key);
 				this.control.loading();
 			}
