--- a/app/elements/editor-console/language-selector.html
+++ b/app/elements/editor-console/language-selector.html
@@ -17,7 +17,7 @@
         }
       },
       getSelectedLanguage: function(){
-        if(this.$.language.selectedIndex!=-1){
+        if(this.$.language.selectedIndex!==-1){
           return this.languages[this.$.language.selectedIndex];
         }
       },
